--- a/.github/workflows/wf-1.yaml
+++ b/.github/workflows/wf-1.yaml
@@ -6,4 +6,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Welcome
-      runs: echo "Sample worklfow"
+      run: echo "Sample worklfow"
