--- a/.github/workflows/wf-2.yaml
+++ b/.github/workflows/wf-2.yaml
@@ -9,7 +9,7 @@ jobs:
     - name: Display the Readme File
       run: |
         ls -l
-        echo "Built success, adding test case" > test-script.sh
+        echo "date #Built success, adding test case" > test-script.sh
 
     - uses: actions/upload-artifact@v4
       with:
